1.8.9 - fixed, Vivaldi was stuck on conversion to new data version, fixed restore group in manager was not restoring folders names

--- a/theme/theme.css
+++ b/theme/theme.css
@@ -30,6 +30,16 @@
 }
 
 
+
+.scroller {
+	width: var(--scrollbar_width);
+	height: var(--scrollbar_height);
+    scrollbar-color: var(--scrollbar_thumb) var(--scrollbar_track);
+    scrollbar-width: thin;
+    overflow-y: scroll;
+}
+
+
 div {
 	background-repeat: no-repeat;
 	-webkit-mask-repeat:no-repeat;
